# F4-OpenAnimationReplacer

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenAnimationReplacer.ini  README.md  vcpkg.json
docs/: ConditionReference.md  HavokReference.md  HavokReference2.md  QuickStart.md
src/: ActiveClip.cpp  ActiveClip.h  ActiveReplacementTracker.h  AnimationCache.cpp  AnimationCache.h  AnimationLog.cpp  AnimationLog.h  BaseConditions.cpp  BaseConditions.h  Conditions.cpp  Conditions.h  FakeClipGenerator.cpp  FakeClipGenerator.h  FormRegistry.cpp  FormRegistry.h  Functions.cpp  Functions.h  HavokGraphUtils.cpp  HavokGraphUtils.h  HavokTypes.h  Hooks.cpp  Hooks.h  Jobs.cpp  Jobs.h  Offsets.h  OpenAnimationReplacer.cpp  OpenAnimationReplacer.h  PCH.h  Parsing.cpp  Parsing.h  RE_Additions.h  ReplacementAnimation.cpp  ReplacementAnimation.h  ReplacerMods.cpp  ReplacerMods.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  Variants.cpp  (+2 more)
src/API/: OpenAnimationReplacer-ConditionTypes.h  OpenAnimationReplacerAPI-Clips.h  OpenAnimationReplacerAPI-Conditions.h  OpenAnimationReplacerAPI.cpp  OpenAnimationReplacerAPI.h
src/UI/: UIAnimationEventLog.cpp  UIAnimationEventLog.h  UIAnimationLog.cpp  UIAnimationLog.h  UIAnimationQueue.cpp  UIAnimationQueue.h  UICommon.cpp  UICommon.h  UIDebugOverlay.cpp  UIDebugOverlay.h  UIFormPicker.cpp  UIFormPicker.h  UIMain.cpp  UIMain.h  UIManager.cpp  UIManager.h  UIWelcomeBanner.cpp  UIWelcomeBanner.h  UIWindow.cpp  UIWindow.h
